--- a/style.css
+++ b/style.css
@@ -1,30 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Gabarito&family=Pixelify+Sans&family=Playpen+Sans:wght@700&family=Young+Serif&display=swap');
-h1{
-    text-align: center;
-    font-family: 'Playpen Sans', cursive;
+body{
+    display: flex;
+    justify-content: center;
+    background-color: black;
 }
-table { 
-    border: 1px solid black; 
-    margin-left: auto; 
-    margin-right: auto; 
-} 
-  
-input[type="button"] { 
-    width: 100%; 
-    padding: 20px 40px; 
-    background-color: green; 
-    color: white; 
-    font-size: 24px; 
-    font-weight: bold; 
-    border: none; 
-    border-radius: 5px; 
-} 
-  
-input[type="text"] { 
-    padding: 20px 30px; 
-    font-size: 24px; 
-    font-weight: bold; 
-    border: none; 
-    border-radius: 5px; 
-    border: 2px solid black; 
+
+.container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 500px;
+  border-radius: 10px;
+  background-color: #a2bbcf;
+  gap: 10px;
+  padding: 10px;
+}
+.grid-item{
+  background-color: #142f44;
+  border: none;
+  border-radius: 5px;
+  padding: 20px;
+  color: white;
+  font-size: 30px;
+  text-align: center;
+}
+
+.input{
+    grid-column: 1 / 4;
+    padding: 20px;
+    outline: none;
+    border: none;
+    font-size: 30px;
+    border-radius: 5px;
 }
