--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: black;
 }
 
 .container{
+  margin-top: 45px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 500px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 400px;
   border-radius: 10px;
   background-color: #a2bbcf;
   gap: 10px;
@@ -19,15 +22,24 @@ body{
   border-radius: 5px;
   padding: 20px;
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
 }
 
 .input{
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
     padding: 20px;
     outline: none;
     border: none;
     font-size: 30px;
     border-radius: 5px;
+}
+
+#equal{
+  grid-column: 2 / 5;
+}
+
+.button-click-animation {
+  transform: scale(1.1);
+  transition: transform 0.2s;
 }
