add some styles

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: black;
+    background-color: blue;
 }
 
 .container{
@@ -42,4 +42,17 @@ body{
 .button-click-animation {
   transform: scale(1.1);
   transition: transform 0.2s;
+}
+footer{
+  margin-top: 20px;
+  font-size: 20px;
+  color: white;
+}
+.source{
+  text-decoration: none;
+  color: white;
+}
+.profile{
+  text-decoration: none;
+  color: white;
 }
